logs/dplayer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DPlayer-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/PyQt5'...
Listing './lib/python3.5/site-packages/PyQt5/Qt'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/lib'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/libexec'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/audio'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/bearer'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/egldeviceintegrations'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/generic'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/geoservices'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/iconengines'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/imageformats'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/mediaservice'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/platforminputcontexts'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/platforms'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/platformthemes'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/playlistformats'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/position'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/printsupport'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/sceneparsers'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/sensorgestures'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/sensors'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/sqldrivers'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/plugins/xcbglintegrations'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/resources'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/translations'...
Listing './lib/python3.5/site-packages/PyQt5/Qt/translations/qtwebengine_locales'...
Listing './lib/python3.5/site-packages/PyQt5/uic'...
Listing './lib/python3.5/site-packages/PyQt5/uic/Compiler'...
Listing './lib/python3.5/site-packages/PyQt5/uic/Loader'...
Listing './lib/python3.5/site-packages/PyQt5/uic/port_v2'...
Compiling './lib/python3.5/site-packages/PyQt5/uic/port_v2/invoke.py'...
***   File "./lib/python3.5/site-packages/PyQt5/uic/port_v2/invoke.py", line 36
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyQt5/uic/port_v2/load_plugin.py'...
***   File "./lib/python3.5/site-packages/PyQt5/uic/port_v2/load_plugin.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/PyQt5/uic/port_v3'...
Listing './lib/python3.5/site-packages/PyQt5/uic/widget-plugins'...
Listing './lib/python3.5/site-packages/PyQt5-5.6.dist-info'...
Listing './lib/python3.5/site-packages/dplayer'...
Listing './lib/python3.5/site-packages/dplayer/icons'...
Listing './lib/python3.5/site-packages/mutagen'...
Listing './lib/python3.5/site-packages/mutagen/asf'...
Listing './lib/python3.5/site-packages/mutagen/id3'...
Listing './lib/python3.5/site-packages/mutagen/mp3'...
Listing './lib/python3.5/site-packages/mutagen/mp4'...
Listing './lib/python3.5/site-packages/mutagen-1.33.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydub'...
Listing './lib/python3.5/site-packages/pydub-0.16.4.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sip-4.18.dist-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
